# quackup

./: .flake8  .gitignore  .pylintrc  .releaserc.json  README.md  package-lock.json  package.json  pyproject.toml  quackup.code-workspace
.github/workflows/: commit.yml
quackup/: cli.py  config.py  migrator.py
tests/: conftest.py  constants.py
