[project]
name = 'quackup'
version = '0.1.0'
description = 'A simple migration tool for DuckDB databases.'
readme = 'README.md'
license = { file = 'LICENSE' }
authors = [
    { name = 'Jayme Edwards', email = 'jayme.edwards@gmail.com' }
]
requires-python = '>=3.7'
keywords = ['duckdb', 'migrations', 'database', 'schema']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dependencies = [
    'click',
    'configparser',
    'dotenv',
    'duckdb'
]

# Optional dependencies for testing
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov"
]

[project.scripts]
quackup = 'quackup.cli:cli'

[build-system]
requires = ['setuptools>=42', 'wheel', 'tomli']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['quackup']
exclude = [
    '.venv',
    'build',
    'dist', 
    'migrations', 
    'node_modules', 
    'tests', 
    '*.md',
    '*.toml',
    '*.ini',
    '*.json',
    '*.code-workspace',
    '.flake8', 
    '.pylintrc',
    '.releasrc.json'
]
